--- a/scss/menu.scss
+++ b/scss/menu.scss
@@ -1,4 +1,4 @@
-#menu {
+.menu-primary-menu-container ol {
 	margin-top: 1rem;
 	list-style-type: none;
 
@@ -23,5 +23,28 @@
 			color: $yellow;
 			background: rgba($black, 0.1);
 		}
+	}
+}
+
+.menu-full-menu-container ul {
+	display: flex;
+	margin: 0 -0.5rem;
+
+	li a {
+		display: block;
+		margin: -1rem 0;
+		padding: 1rem 0.75rem;
+		font-weight: 600;
+		text-decoration: none;
+		color: $greyDark;
+		opacity: 0.5;
+
+		&:hover {
+			opacity: 0.7;
+		}
+	}
+	li.current_page_item a {
+		color: $blue;
+		opacity: 1;
 	}
 }
