--- a/style.css
+++ b/style.css
@@ -70,6 +70,14 @@ body {
   font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
+::-moz-selection {
+  background-color: #FAFE8D;
+  color: #3417AD; }
+
+::selection {
+  background-color: #FAFE8D;
+  color: #3417AD; }
+
 h1 {
   font-size: 2.5rem;
   color: #3417AD; }
@@ -120,13 +128,12 @@ hr {
     hr {
       margin-right: -8rem; } }
 
-.home main {
-  padding-top: 20rem; }
-
 .page-name--join {
   background: #FAFE8D; }
   .page-name--join p {
     color: rgba(51, 51, 68, 0.9); }
+  .page-name--join .main__footer {
+    border-top: 1px solid #e7f002; }
 
 .sidebar-quote {
   margin-bottom: 0; }
@@ -137,33 +144,12 @@ hr {
   .sidebar-quote::before {
     display: none; }
 
-.sidebar-footer {
-  margin: 6rem -2rem -2rem;
-  padding: 1.5rem 2rem;
-  background: rgba(0, 0, 0, 0.1);
-  color: rgba(255, 255, 255, 0.25); }
-  .sidebar-footer a {
-    color: inherit;
-    text-decoration: none; }
-    .sidebar-footer a:hover {
-      border-bottom: 1px solid currentColor; }
-
-.main-footer {
-  display: flex;
-  flex: 1;
-  width: 100%;
-  margin: 6rem -2rem -2rem;
-  padding: 1.5rem 2rem;
-  background: rgba(0, 0, 0, 0.1); }
-  @media screen and (min-width: 30rem) {
-    .main-footer {
-      margin-right: -6rem; } }
-
 #content {
   min-height: 100vh; }
   @media screen and (min-width: 30rem) {
     #content {
-      display: flex; } }
+      display: flex;
+      align-items: stretch; } }
 
 aside {
   flex: 1;
@@ -179,41 +165,84 @@ aside {
 
 main {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   flex: 1;
   flex-basis: 67%;
-  max-height: 100vh;
-  padding: 2rem; }
+  height: 100vh;
+  padding: 0; }
   @media screen and (min-width: 30rem) {
     main {
-      padding-right: 8rem;
       overflow-y: scroll;
       -webkit-overflow-scrolling: touch; } }
   main .main__title {
     margin-top: 8rem;
     margin-bottom: 2rem; }
+  main .main__content {
+    flex: 0;
+    padding: 2rem; }
+    @media screen and (min-width: 30rem) {
+      main .main__content {
+        padding-right: 8rem; } }
+  main .main__footer {
+    width: 100%;
+    padding: 1.5rem 2rem;
+    background: #FAFE8D; }
 
-#menu {
+.home main .main__content {
+  padding: 20rem 2rem 2rem; }
+
+.sidebar__footer {
+  margin: 6rem -2rem -2rem;
+  padding: 1.5rem 2rem;
+  background: rgba(0, 0, 0, 0.1);
+  color: rgba(255, 255, 255, 0.25); }
+  .sidebar__footer a {
+    color: inherit;
+    text-decoration: none; }
+    .sidebar__footer a:hover {
+      border-bottom: 1px solid currentColor; }
+
+.menu-primary-menu-container ol {
   margin-top: 1rem;
   list-style-type: none; }
-  #menu > li {
+  .menu-primary-menu-container ol > li {
     counter-increment: customlistcounter; }
-  #menu > li:before {
+  .menu-primary-menu-container ol > li:before {
     float: left;
     margin-top: 0.25rem;
     content: "0" counter(customlistcounter) "—";
     pointer-events: none;
     opacity: 0.75; }
-  #menu:first-child {
+  .menu-primary-menu-container ol:first-child {
     counter-reset: customlistcounter; }
-  #menu a {
+  .menu-primary-menu-container ol a {
     display: block;
     margin-bottom: 0.25rem;
     padding: 0.25rem 0.5rem;
     color: inherit;
     text-decoration: none; }
-    #menu a:hover {
+    .menu-primary-menu-container ol a:hover {
       color: #FAFE8D;
       background: rgba(0, 0, 0, 0.1); }
+
+.menu-full-menu-container ul {
+  display: flex;
+  margin: 0 -0.5rem; }
+  .menu-full-menu-container ul li a {
+    display: block;
+    margin: -1rem 0;
+    padding: 1rem 0.75rem;
+    font-weight: 600;
+    text-decoration: none;
+    color: #333344;
+    opacity: 0.5; }
+    .menu-full-menu-container ul li a:hover {
+      opacity: 0.7; }
+  .menu-full-menu-container ul li.current_page_item a {
+    color: #3417AD;
+    opacity: 1; }
 
 .card {
   margin: 2rem 0;
